Overall layout implemented

--- a/index.html
+++ b/index.html
@@ -1,9 +1,59 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<title>Brennan Colberg</title>
+		<link href="index.css" rel="stylesheet" />
 	</head>
+
 	<body>
-		<p>Hi! I'm Brennan Colberg, and this website is still unmade. Want it made faster? Spam me at <a href="mailto:bcolberg@uw.edu">my email</a> (politely, of course)!</p>
+		
+		<!-- body header (with my name!) -->
+		<header>
+			<h1>Brennan Colberg</h1>
+		</header>
+		
+		<div id="content">
+
+			<!-- left-side (with personal info and blog) -->
+			<div id="left">
+				left
+				<div id="intro">
+					introduction
+				</div>
+				<div id="blog">
+					blog
+				</div>
+				/left
+			</div>
+
+			<!-- right-side (with projects) -->
+			<div id="right">
+				right
+				<div id="projects">
+					projects
+				</div>
+				/right
+			</div>
+
+		</div>
+		
+		<!-- whatever I'm putting in the footer -->
+		<footer>
+			
+			<!-- social media links -->
+			<div id="contact">
+				<p><a href="https://github.com/BrennanColberg">GitHub</a></p>
+				<p><a href="https://m.me/BrennanColberg">Messenger</a></p>
+				<p><a href="https://instagram.com/BrennanColberg">Instagram</a></p>
+			</div>
+			
+			<!-- code gotten from assignments listed in the 17au version of the UW CSE 154 course website; not my own -->
+			<div id="w3c">
+				<a href="https://webster.cs.washington.edu/validate-html.php"><img src="https://webster.cs.washington.edu/w3c-html.png" alt="Valid HTML5" /></a>
+				<a href="https://webster.cs.washington.edu/validate-css.php"><img src="https://webster.cs.washington.edu/w3c-css.png" alt="Valid CSS" /></a>
+			</div>
+		</footer>
+		
 	</body>
 </html>
