--- a/index.html
+++ b/index.html
@@ -29,11 +29,36 @@
 
 			<!-- right-side (with projects) -->
 			<div id="right">
-				right
 				<div id="projects">
-					projects
+					<article>
+						<section class="title">
+							<h3>Carbon</h3>
+						</section>
+						<section class="link">
+							<p><a href="https://carbon.brennancolberg.com">Website</a></p>
+							<p><a href="https://brennancolberg.github.com/carbon">Code</a></p>
+						</section>
+						<section class="description">
+							<p>
+								this is a thing I did for a teacher to get her to love me because she had an activity and I <em>upgraded</em> it to a wacky digital thingimajig
+							</p>
+						</section>
+					</article>
+					<article>
+						<section class="title">
+							<h3>Axis &amp; Allies</h3>
+						</section>
+						<section class="link">
+							<p><a href="https://brennancolberg.github.io/axis-allies">Website</a></p>
+							<p><a href="https://github.com/BrennanColberg/axis-allies">Code</a></p>
+						</section>
+						<section class="description">
+							<p>
+								Have you ever been playing a nice game of "Axis  &amp; Allies"&trade; yet cannot remember whose turn it is or lack sufficiently badass music? Worry no longer! This website cycles through the countries in proper order, showing their flags and playing their anthems (all as in WWII)!
+							</p>
+						</section>
+					</article>
 				</div>
-				/right
 			</div>
 
 		</div>
