Basic about/blog + formatting

--- a/index.html
+++ b/index.html
@@ -17,26 +17,34 @@
 
 			<!-- left-side (with personal info and blog) -->
 			<div id="left">
-				left
-				<div id="intro">
-					introduction
+				<div id="introduction">
+					Hello my name is brennan welcome to my website this is the second in the series of "crappy websites made by Brennan" (exhibit A: <a href="https://frc3268.github.io">the crappy robotics website I made</a>)! 
 				</div>
-				<div id="blog">
-					blog
+				<div id="blog" class="feed">
+					<article>
+						<section class="title">
+							<h2>My really horrible no good bad day</h2>
+							<h4>like really, I almost died, which is not fun</h4>
+						</section>
+						<section class="content">
+						</section>
+						<section class="more!">
+							<a href="">[... read more ...]</a>
+						</section>
+					</article>
 				</div>
-				/left
 			</div>
 
 			<!-- right-side (with projects) -->
 			<div id="right">
-				<div id="projects">
+				<div id="projects" class="feed">
 					<article>
 						<section class="title">
 							<h3>Carbon</h3>
 						</section>
 						<section class="link">
 							<p><a href="https://carbon.brennancolberg.com">Website</a></p>
-							<p><a href="https://brennancolberg.github.com/carbon">Code</a></p>
+							<p><a href="https://github.com/BrennanColberg/carbon">Code</a></p>
 						</section>
 						<section class="description">
 							<p>
