Blog content implementation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
 		<!-- body header (with my name!) -->
 		<header>
-			<h1>[brennan colberg]</h1>
+			<h1>Brennan Colberg</h1>
 		</header>
 		
 		<div id="content">
@@ -26,17 +26,7 @@
 					Hello my name is brennan welcome to my website this is the second in the series of "crappy websites made by Brennan" (exhibit A: <a href="https://frc3268.github.io">the crappy robotics website I made</a>)! 
 				</div>
 				<div id="blog" class="feed">
-					<article>
-						<section class="title">
-							<h2>My really horrible no good bad day</h2>
-							<h4>like really, I almost died, which is not fun</h4>
-						</section>
-						<section class="content">
-						</section>
-						<section class="more!">
-							<a href="">[... read more ...]</a>
-						</section>
-					</article>
+					
 				</div>
 			</div>
 
