Code simplification, HTML page expansion
- got rid of lots of unnecessary nested divs
- sorted and simplified CSS
- conditional content loading through index.js in case a page does not have all different ID'd content divs

--- a/index.html
+++ b/index.html
@@ -16,25 +16,29 @@
 		<!-- body header (with my name!) -->
 		<header>
 			<h1>Brennan Colberg</h1>
+			<nav>
+				<p><a href="index.html">Home</a></p>
+				<p><a href="index.html">Blog</a></p>
+				<p><a href="index.html">Projects</a></p>
+			</nav>
 		</header>
+		
+		<div id="introduction">
+				Hello my name is brennan welcome to my website this is the second in the series of "crappy websites made by Brennan" (exhibit A: <a href="https://frc3268.github.io">the crappy robotics website I made</a>)! 
+			</div>
 		
 		<div id="content">
 
 			<!-- left-side (with personal info and blog) -->
-			<div id="left">
-				<div id="introduction">
-					Hello my name is brennan welcome to my website this is the second in the series of "crappy websites made by Brennan" (exhibit A: <a href="https://frc3268.github.io">the crappy robotics website I made</a>)! 
-				</div>
-				<div id="blog" class="feed">
-					
-				</div>
+			<div id="blog" class="feed">
+				<p><a href="blog.html">Blog</a></p>
+				<!-- index.js creates things here from blog.json -->
 			</div>
 
 			<!-- right-side (with projects) -->
-			<div id="right">
-				<div id="projects" class="feed">
-					<!-- index.js creates things here from projects.json -->
-				</div>
+			<div id="projects" class="feed">
+				<p><a href="projects.html">Past Projects</a></p>
+				<!-- index.js creates things here from projects.json -->
 			</div>
 
 		</div>
