--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 		<!-- body header (with my name!) -->
 		<header>
 			<h1>Brennan Colberg</h1>
-			<nav>
-				<p><a href="index.html">Home</a></p>
-				<p><a href="index.html">Blog</a></p>
-				<p><a href="index.html">Projects</a></p>
+			<nav id="menu">
+				<!-- generated with index.js from menu.json -->
 			</nav>
 		</header>
 		
@@ -32,13 +30,13 @@
 			<!-- left-side (with personal info and blog) -->
 			<div id="blog" class="feed">
 				<p><a href="blog.html">Blog</a></p>
-				<!-- index.js creates things here from blog.json -->
+				<!-- generated with index.js from blog.json -->
 			</div>
 
 			<!-- right-side (with projects) -->
 			<div id="projects" class="feed">
 				<p><a href="projects.html">Past Projects</a></p>
-				<!-- index.js creates things here from projects.json -->
+				<!-- generated with index.js from projects.json -->
 			</div>
 
 		</div>
