--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 		</header>
 		
 		<div id="introduction">
-			Hello my name is brennan welcome to my website; this is the second in the series of "crappy websites made by Brennan" (exhibit A: <a href="https://frc3268.github.io">the crappy robotics website I made</a>)! 
+			<!-- copied with index.js from introduction.html -->
 		</div>
 		
 		<div id="content">
