links -> new tab
puts 'target="_blank"' into each link

--- a/introduction.html
+++ b/introduction.html
@@ -1,1 +1,1 @@
-Hello my name is brennan welcome to my website; this is the second in the series of "crappy websites made by Brennan" (exhibit A: <a href="https://frc3268.github.io">the crappy robotics website I made</a>)! 
+Hello my name is brennan welcome to my website; this is the second in the series of "crappy websites made by Brennan" (exhibit A: <a href="https://frc3268.github.io" target="_blank">the crappy robotics website I made</a>)! 
