Feed formatting attempt (rounded corners, shadows, colored borders)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Brennan Colberg</title>
 		<link href="index.css" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Lato|Merriweather|Roboto+Mono" rel="stylesheet">
 		
 		<!-- ajax code from CSE154, hosted on personal repository -->
 		<script src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
