Shaded tile backgrounds
backgrounds are now shaded with a 10% opacity version of the border color (hard-coded, right now, not absolute)

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 		<script src="index.js"></script>
 	</head>
 
-	<body>
+	<body id="home">
 		
 		<!-- body header (with my name!) -->
 		<header>
