Page heading font change

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Brennan Colberg</title>
 		<link href="index.css" rel="stylesheet" />
-		<link href="https://fonts.googleapis.com/css?family=Lato|Merriweather|Roboto+Mono" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Lato|Merriweather|Roboto+Mono|Space+Mono" rel="stylesheet">
 		
 		<!-- ajax code from CSE154, hosted on personal repository -->
 		<script src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
@@ -16,7 +16,7 @@
 		
 		<!-- body header (with my name!) -->
 		<header>
-			<h1>Brennan Colberg</h1>
+			<h1>[brennan.colberg]</h1>
 			<nav id="menu">
 				<!-- generated with index.js from menu.json -->
 			</nav>
