UW Logo in header & Attributions

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 		
 		<!-- body header (with my name!) -->
 		<header>
-			<h1>[brennan.colberg]</h1>
+			<h1>Brennan Colberg</h1>
 			<nav id="menu">
 				<!-- generated with index.js from menu.json -->
 			</nav>
+			<img src="images/uw.png" alt="UW logo">
 		</header>
 		
 		<div id="introduction">
@@ -38,6 +39,8 @@
 		</div>
 		
 		<footer>
+			<p>&copy; Brennan Colberg 2018</p>
+			<button id="attribution">Attributions</button>
 			<div id="contact">
 				<!-- generated with index.js from contact.json -->
 			</div>
