Citations & Collaboration buttons

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 		</div>
 		
 		<footer>
-			<p>&copy; Brennan Colberg 2018</p>
-			<button id="attribution">Attributions</button>
+			<img src="images/copyright.png" alt="Copyright Brennan Colberg 2018">
+			<button id="attribution">Citations</button>
+			<button id="collaboration">Collaborations</button>
 			<div id="contact">
 				<!-- generated with index.js from contact.json -->
 			</div>
