--- a/introduction.html
+++ b/introduction.html
@@ -1,1 +1,2 @@
-Hello my name is brennan welcome to my website; this is the second in the series of "crappy websites made by Brennan" (exhibit A: <a href="https://frc3268.github.io" target="_blank">the crappy robotics website I made</a>)! 
+<p><strong>Hello, my name is Brennan!</strong> Welcome to my website; this is the second website I've made (the first one was for <a href="https://frc3268.github.io" target="_blank">my robotics team</a>). I'm a first-year Computer Science student at the University of Washington in Seattle. I program a lot in my spare time -- look at the projects down below! I want to start posting blogs as well, soon -- look at the placeholder blog area down below too!</p>
+<img src="images/senior-photo.jpg" href="senior photo">
