Recalibration of HTML pages & menu

--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Brennan Colberg</title>
 		<link href="index.css" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Lato|Merriweather|Roboto+Mono|Space+Mono" rel="stylesheet">
 		
 		<!-- ajax code from CSE154, hosted on personal repository -->
 		<script src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
@@ -11,7 +12,7 @@
 		<script src="index.js"></script>
 	</head>
 
-	<body id="home">
+	<body>
 		
 		<!-- body header (with my name!) -->
 		<header>
@@ -19,20 +20,19 @@
 			<nav id="menu">
 				<!-- generated with index.js from menu.json -->
 			</nav>
+			<img src="images/uw.png" alt="UW logo">
 		</header>
-		
-		<div id="introduction">
-			<!-- copied with index.js from introduction.html -->
-		</div>
 		
 		<div id="content">
 			<div id="blog" class="feed">
-				<p><a href="blog.html">Blog</a></p>
 				<!-- generated with index.js from blog.json -->
 			</div>
 		</div>
 		
 		<footer>
+			<img src="images/copyright.png" alt="Copyright Brennan Colberg 2018">
+			<button id="attribution">Citations</button>
+			<button id="collaboration">Collaborations</button>
 			<div id="contact">
 				<!-- generated with index.js from contact.json -->
 			</div>
