--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 	<head>
 		<title>Brennan Colberg</title>
 		<link href="index.css" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Lato|Merriweather|Roboto+Mono|Space+Mono" rel="stylesheet">
 		
 		<!-- ajax code from CSE154, hosted on personal repository -->
 		<script src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
@@ -19,20 +20,19 @@
 			<nav id="menu">
 				<!-- generated with index.js from menu.json -->
 			</nav>
+			<img src="images/uw.png" alt="UW logo">
 		</header>
-		
-		<div id="introduction">
-			<!-- copied with index.js from introduction.html -->
-		</div>
 		
 		<div id="content">
 			<div id="projects" class="feed">
-				<p><a href="projects.html">Past Projects</a></p>
 				<!-- generated with index.js from projects.json -->
 			</div>
 		</div>
 		
 		<footer>
+			<img src="images/copyright.png" alt="Copyright Brennan Colberg 2018">
+			<button id="attribution">Citations</button>
+			<button id="collaboration">Collaborations</button>
 			<div id="contact">
 				<!-- generated with index.js from contact.json -->
 			</div>
