Comments & some formatting

--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,9 @@
+<!--
+Name: Brennan Colberg
+Date: 08.28.18
+Section: CSE 190e
+This is the blog.html page for my portfolio of web development work. It includes a list of blog posts generated from a JSON file, which have yet to be actually written and instead just have lorem ipsum right now.
+-->
 <!DOCTYPE html>
 <html lang="en">
 
