--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,9 @@
+<!--
+Name: Brennan Colberg
+Date: 08.28.18
+Section: CSE 190e
+This is the projects.html page for my portfolio of web development work. It includes links to projects I have done and descriptions of what each entail.
+-->
 <!DOCTYPE html>
 <html lang="en">
 
