--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+Name: Brennan Colberg
+Date: 08.28.18
+Section: CSE 190e
+This is the index.html page for my portfolio of web development work. It includes links to side projects I have done, as well as previews of a blog (which is yet to be created).
+-->
 <!DOCTYPE html>
 <html lang="en">
 
