--- a/introduction.html
+++ b/introduction.html
@@ -4,7 +4,8 @@ Date: 08.28.18
 Section: CSE 190e
 This is the introduction.html page for my portfolio of web development work. It has information about me, and is copied by AJAX into the #introduction div in each page where that exists by index.js
 -->
-<p>
+<div><p>
 	<strong>Hello, my name is Brennan!</strong> Welcome to my website; this is the second website I've made (the first one was for <a href="https://frc3268.github.io" target="_blank">my robotics team</a>). I'm a first-year Computer Science student at the University of Washington in Seattle. I program a lot in my spare time -- look at the projects down below! I want to start posting blogs as well, soon -- look at the placeholder blog area down below too!
 </p>
+<ul><strong>My Languages:</strong><li>Java</li><li>Python</li><li>JS</li><li>HTML/CSS</li><li>PHP</li></ul></div>
 <img src="images/senior-photo.jpg" href="senior photo">
