Reparing site after assignment grading
I had to butcher the site to submit it for an assignment, but now I've undone all of those necessary parts and it's what I created for myself again

--- a/blog.html
+++ b/blog.html
@@ -1,9 +1,3 @@
-<!--
-Name: Brennan Colberg
-Date: 08.28.18
-Section: CSE 190e
-This is the blog.html page for my portfolio of web development work. It includes a list of blog posts generated from a JSON file, which have yet to be actually written and instead just have lorem ipsum right now.
--->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -26,19 +20,17 @@ This is the blog.html page for my portfolio of web development work. It includes
 			<nav id="menu">
 				<!-- generated with index.js from menu.json -->
 			</nav>
-			<img src="images/uw.png" alt="UW logo">
 		</header>
 		
 		<div id="content">
 			<div id="blog" class="feed">
+				<p><a href="blog.html">Blog</a></p>
 				<!-- generated with index.js from blog.json -->
 			</div>
 		</div>
 		
 		<footer>
-			<img src="images/copyright.png" alt="Copyright Brennan Colberg 2018">
-			<button id="attribution">Citations</button>
-			<button id="collaboration">Collaborations</button>
+			<p>&copy; Brennan Colberg 2018</p>
 			<div id="contact">
 				<!-- generated with index.js from contact.json -->
 			</div>
