--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,3 @@
-<!--
-Name: Brennan Colberg
-Date: 08.28.18
-Section: CSE 190e
-This is the projects.html page for my portfolio of web development work. It includes links to projects I have done and descriptions of what each entail.
--->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -26,7 +20,6 @@ This is the projects.html page for my portfolio of web development work. It incl
 			<nav id="menu">
 				<!-- generated with index.js from menu.json -->
 			</nav>
-			<img src="images/uw.png" alt="UW logo">
 		</header>
 		
 		<div id="content">
@@ -36,9 +29,7 @@ This is the projects.html page for my portfolio of web development work. It incl
 		</div>
 		
 		<footer>
-			<img src="images/copyright.png" alt="Copyright Brennan Colberg 2018">
-			<button id="attribution">Citations</button>
-			<button id="collaboration">Collaborations</button>
+			<p>&copy; Brennan Colberg 2018</p>
 			<div id="contact">
 				<!-- generated with index.js from contact.json -->
 			</div>
