removed #content div in all HTML, chagned headers
- headers are now h2 not p
- #content div is dead and gone (unnecessary for anything)

--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
 			<!-- copied with index.js from introduction.html -->
 		</div>
 		
-		<div id="content">
-			<p><a href="projects.html">Past Projects</a></p>
-			<div id="projects" class="feed">
-				<!-- generated with index.js from projects.json -->
-			</div>
-			<p><a href="blog.html">Blog</a></p>
-			<div id="blog" class="feed">
-				<!-- generated with index.js from blog.json -->
-			</div>
+		<h2><a href="projects.json">Past Projects</a></h2>
+		<div id="projects" class="feed">
+			<!-- generated with index.js from projects.json -->
+		</div>
+		
+		<h2><a href="blog.html">Blog</a></h2>
+		<div id="blog" class="feed">
+			<!-- generated with index.js from blog.json -->
 		</div>
 		
 		<footer>
