--- a/index.html
+++ b/index.html
@@ -26,15 +26,17 @@
 			<!-- copied with index.js from introduction.html -->
 		</div>
 		
-		<h2><a href="projects.json">Past Projects</a></h2>
+		<h2><a href="projects.html">Past Projects</a></h2>
 		<div id="projects" class="feed">
 			<!-- generated with index.js from projects.json -->
 		</div>
 		
+		<!--
 		<h2><a href="blog.html">Blog</a></h2>
 		<div id="blog" class="feed">
-			<!-- generated with index.js from blog.json -->
+			<!-- generated with index.js from blog.json --\>
 		</div>
+		-->
 		
 		<footer>
 			<p>&copy; Brennan Colberg 2018</p>
