--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script src="index.js"></script>
 	</head>
 
-	<body>
+	<body id="page-home">
 		
 		<!-- body header (with my name!) -->
 		<header>
@@ -26,7 +26,7 @@
 			<!-- copied with index.js from introduction.html -->
 		</div>
 		
-		<h2><a href="projects.html">Past Projects</a></h2>
+		<h2><a href="projects.html">Personal Projects</a></h2>
 		<div id="projects" class="feed">
 			<!-- generated with index.js from projects.json -->
 		</div>
@@ -39,10 +39,10 @@
 		-->
 		
 		<footer>
-			<p>&copy; Brennan Colberg 2018</p>
 			<div id="contact">
 				<!-- generated with index.js from contact.json -->
 			</div>
+			<p>&copy; Brennan Colberg 2018</p>
 		</footer>
 		
 	</body>
