--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 		<script src="index.js"></script>
 	</head>
 
-	<body>
+	<body id="page-projects">
 		
 		<!-- body header (with my name!) -->
 		<header>
