--- a/home/index.html
+++ b/home/index.html
@@ -3,16 +3,15 @@
 
 	<head>
 		<title>Brennan Colberg</title>
-		<link href="index.css" rel="stylesheet" />
+		<link href="../style.css" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css?family=Lato|Merriweather|Roboto+Mono|Space+Mono" rel="stylesheet">
-		
 		<!-- ajax code from CSE154, hosted on personal repository -->
 		<script src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
 		<!-- JS which automatically populates the blog and article portions -->
-		<script src="index.js"></script>
+		<script src="../content.js"></script>
 	</head>
 
-	<body id="page-projects">
+	<body id="page-home">
 		
 		<!-- body header (with my name!) -->
 		<header>
@@ -22,15 +21,20 @@
 			</nav>
 		</header>
 		
+		<p id="introduction">
+			<strong>Hello, my name is Brennan!</strong> Welcome to my website; this is the second website I've made (the first one was for <a href="https://frc3268.github.io" target="_blank">my robotics team</a>). I'm a first-year Computer Science student at the University of Washington in Seattle. I program a lot in my spare time -- look at the projects down below! I want to start posting blogs as well, soon -- look at the placeholder blog area down below too!
+		</p>
+		
+		<h2><a href="projects.html">Personal Projects</a></h2>
 		<div id="projects" class="feed">
 			<!-- generated with index.js from projects.json -->
 		</div>
 		
 		<footer>
-			<p>&copy; Brennan Colberg 2018</p>
 			<div id="contact">
 				<!-- generated with index.js from contact.json -->
 			</div>
+			<p>&copy; Brennan Colberg 2018</p>
 		</footer>
 		
 	</body>
