--- a/home/index.html
+++ b/home/index.html
@@ -26,6 +26,7 @@
 		<div id="projects" class="feed">
 			<!-- generated with index.js from projects.json -->
 		</div>
+		<div id="project-languages"></div>
 		
 		<footer>
 			<div id="contact">
