--- a/projects/index.html
+++ b/projects/index.html
@@ -21,6 +21,7 @@
 		<div id="projects" class="feed">
 			<!-- generated with index.js from projects.json -->
 		</div>
+		<div id="project-languages"></div>
 		
 		<footer>
 			<p>&copy; Brennan Colberg 2018</p>
