added filter-on-click to language key

--- a/home/index.html
+++ b/home/index.html
@@ -24,7 +24,7 @@
 		
 		<h2><a href="projects.html">Personal Projects</a></h2>
 		<div id="projects" class="feed">
-			<!-- generated with index.js from projects.json -->
+			<!-- generated with index.js from projects/projects.json -->
 		</div>
 		
 		<footer>
