--- a/projects/index.html
+++ b/projects/index.html
@@ -18,9 +18,12 @@
 			</nav>
 		</header>
 		
-		<div id="project-languages"></div>
+		<div id="project-languages">
+			<h3>Filter Language:</h3>
+			<!-- generated with index.js from projects/languages.json -->
+		</div>
 		<div id="projects" class="feed">
-			<!-- generated with index.js from projects.json -->
+			<!-- generated with index.js from projects/projects.json -->
 		</div>
 		
 		<footer>
