--- a/home/index.html
+++ b/home/index.html
@@ -21,7 +21,7 @@
 			<strong>Hello, my name is Brennan!</strong> Welcome to my website; this is the second website I've made (the first one was for <a href="https://frc3268.github.io" target="_blank">my robotics team</a>). I'm a first-year Computer Science student at the University of Washington in Seattle. I program a lot in my spare time -- look at the projects down below! I want to start posting blogs as well, soon -- look at the placeholder blog area down below too!
 		</p>
 		
-		<h2><a href="projects.html">Personal Projects</a></h2>
+		<h2>Personal Projects</h2>
 		<div id="projects" class="feed">
 			<!-- generated with index.js from projects/projects.json -->
 		</div>
