more updates to sections & description

--- a/index.html
+++ b/index.html
@@ -22,16 +22,23 @@
             <header>
               <h1>B.D. Colberg</h1>
               <p>
-                Autodidact. Avid reader. Writer.<br />
-                Educational researcher. Programmer.
+                Autodidact. Avid reader. Writer. Tall.<br />
+                Educational researcher. Programmer.<br />
+                Talker. Teetotaler. Prolific amateur.<br />
+                Not that old (around 20).
               </p>
             </header>
+
             <nav id="nav">
               <ul class="actions stacked special animated spinY">
                 <li><a href="#about" class="button">About</a></li>
-                <li><a href="#writing" class="button">Writing</a></li>
+                <li><a href="#readings" class="button">Readings</a></li>
+                <li><a href="#writings" class="button">Writings</a></li>
+                <li><a href="#influences" class="button">Influences</a></li>
                 <li><a href="#projects" class="button">Projects</a></li>
-                <!-- <li><a href="#elements" class="button">Elements</a></li> -->
+                <li>
+                  <a href="#idiosyncracies" class="button">Idiosyncracies</a>
+                </li>
               </ul>
             </nav>
             <ul class="icons">
@@ -111,8 +118,40 @@
         </div>
       </article>
 
+      <!-- Readings -->
+      <article id="readings" class="panel secondary">
+        <div class="image">
+          <img src="images/pic02.jpg" alt="" data-position="center center" />
+        </div>
+        <div class="content">
+          <ul class="actions animated spinX">
+            <li><a href="#" class="button small back">Back</a></li>
+          </ul>
+          <div class="inner">
+            <header>
+              <h2>Work</h2>
+              <p>
+                Magna feugiat lorem ipsum dolor<br />
+                veroeros sed adipiscing
+              </p>
+            </header>
+            <p>
+              Lorem ipsum dolor sit amet, magna etiam adipiscing elit. Vivamus
+              in quam eu turpis venenatis euismod eget ac velit. Magna pharetra
+              eleifend urna quis laoreet. Nullam quis urna iaculis metus ornare
+              accumsan. Sed nunc lacus, lobortis nec ante sit amet.
+            </p>
+            <p>
+              Vitae quis magna. Sed condimentum dui sed nunc dapibus dignissim.
+              Sed at arcu gravida, vehicula massa ut, consectetur urna. Morbi eu
+              venenatis turpis. In tincidunt pharetra etiam veroeros.
+            </p>
+          </div>
+        </div>
+      </article>
+
       <!-- Writing -->
-      <article id="work" class="panel secondary">
+      <article id="writings" class="panel secondary">
         <div class="image">
           <img src="images/pic02.jpg" alt="" data-position="center center" />
         </div>
@@ -144,7 +183,71 @@
       </article>
 
       <!-- Projects -->
-      <article id="work" class="panel secondary">
+      <article id="projects" class="panel secondary">
+        <div class="image">
+          <img src="images/pic02.jpg" alt="" data-position="center center" />
+        </div>
+        <div class="content">
+          <ul class="actions animated spinX">
+            <li><a href="#" class="button small back">Back</a></li>
+          </ul>
+          <div class="inner">
+            <header>
+              <h2>Work</h2>
+              <p>
+                Magna feugiat lorem ipsum dolor<br />
+                veroeros sed adipiscing
+              </p>
+            </header>
+            <p>
+              Lorem ipsum dolor sit amet, magna etiam adipiscing elit. Vivamus
+              in quam eu turpis venenatis euismod eget ac velit. Magna pharetra
+              eleifend urna quis laoreet. Nullam quis urna iaculis metus ornare
+              accumsan. Sed nunc lacus, lobortis nec ante sit amet.
+            </p>
+            <p>
+              Vitae quis magna. Sed condimentum dui sed nunc dapibus dignissim.
+              Sed at arcu gravida, vehicula massa ut, consectetur urna. Morbi eu
+              venenatis turpis. In tincidunt pharetra etiam veroeros.
+            </p>
+          </div>
+        </div>
+      </article>
+
+      <!-- Idiosyncracies -->
+      <article id="idiosyncracies" class="panel secondary">
+        <div class="image">
+          <img src="images/pic02.jpg" alt="" data-position="center center" />
+        </div>
+        <div class="content">
+          <ul class="actions animated spinX">
+            <li><a href="#" class="button small back">Back</a></li>
+          </ul>
+          <div class="inner">
+            <header>
+              <h2>Work</h2>
+              <p>
+                Magna feugiat lorem ipsum dolor<br />
+                veroeros sed adipiscing
+              </p>
+            </header>
+            <p>
+              Lorem ipsum dolor sit amet, magna etiam adipiscing elit. Vivamus
+              in quam eu turpis venenatis euismod eget ac velit. Magna pharetra
+              eleifend urna quis laoreet. Nullam quis urna iaculis metus ornare
+              accumsan. Sed nunc lacus, lobortis nec ante sit amet.
+            </p>
+            <p>
+              Vitae quis magna. Sed condimentum dui sed nunc dapibus dignissim.
+              Sed at arcu gravida, vehicula massa ut, consectetur urna. Morbi eu
+              venenatis turpis. In tincidunt pharetra etiam veroeros.
+            </p>
+          </div>
+        </div>
+      </article>
+
+      <!-- Influences -->
+      <article id="influences" class="panel secondary">
         <div class="image">
           <img src="images/pic02.jpg" alt="" data-position="center center" />
         </div>
