added some pictures and the idiosyncracies page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Brennan Colberg</title>
+    <title>B. D. Colberg</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -15,25 +15,29 @@
       <!-- Home -->
       <article id="home" class="panel special">
         <div class="image">
-          <img src="images/pic01.jpg" alt="" data-position="center center" />
+          <img
+            src="images/lightbulb.jpg"
+            alt="wacky lightbulb floating in midair"
+            data-position="center center"
+          />
         </div>
         <div class="content">
           <div class="inner">
             <header>
-              <h1>B.D. Colberg</h1>
+              <h1>B. D. Colberg</h1>
               <p>
-                Autodidact. Avid reader. Writer. Tall.<br />
+                Autodidact. Avid reader &amp; Writer. Tall.<br />
                 Educational researcher. Programmer.<br />
                 Talker. Teetotaler. Prolific amateur.<br />
-                Not that old (around 20).
+                Intense? Not that old (around 20).
               </p>
             </header>
 
             <nav id="nav">
               <ul class="actions stacked special animated spinY">
                 <li><a href="#about" class="button">About</a></li>
-                <li><a href="#readings" class="button">Readings</a></li>
-                <li><a href="#writings" class="button">Writings</a></li>
+                <li><a href="#reading" class="button">Readings</a></li>
+                <li><a href="#writing" class="button">Writings</a></li>
                 <li><a href="#influences" class="button">Influences</a></li>
                 <li><a href="#projects" class="button">Projects</a></li>
                 <li>
@@ -44,14 +48,7 @@
             <ul class="icons">
               <li>
                 <a
-                  href="https://twitter.com/BrennanColberg"
-                  class="icon fa-twitter"
-                  ><span class="label">Twitter</span></a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://medium.com/@BrennanColberg"
+                  href="https://medium.com/@beadycolberg"
                   target="_blank"
                   class="icon fa-medium"
                   ><span class="label">Medium</span></a
@@ -118,8 +115,8 @@
         </div>
       </article>
 
-      <!-- Readings -->
-      <article id="readings" class="panel secondary">
+      <!-- Reading -->
+      <article id="reading" class="panel secondary">
         <div class="image">
           <img src="images/pic02.jpg" alt="" data-position="center center" />
         </div>
@@ -151,7 +148,7 @@
       </article>
 
       <!-- Writing -->
-      <article id="writings" class="panel secondary">
+      <article id="writing" class="panel secondary">
         <div class="image">
           <img src="images/pic02.jpg" alt="" data-position="center center" />
         </div>
@@ -214,38 +211,6 @@
         </div>
       </article>
 
-      <!-- Idiosyncracies -->
-      <article id="idiosyncracies" class="panel secondary">
-        <div class="image">
-          <img src="images/pic02.jpg" alt="" data-position="center center" />
-        </div>
-        <div class="content">
-          <ul class="actions animated spinX">
-            <li><a href="#" class="button small back">Back</a></li>
-          </ul>
-          <div class="inner">
-            <header>
-              <h2>Work</h2>
-              <p>
-                Magna feugiat lorem ipsum dolor<br />
-                veroeros sed adipiscing
-              </p>
-            </header>
-            <p>
-              Lorem ipsum dolor sit amet, magna etiam adipiscing elit. Vivamus
-              in quam eu turpis venenatis euismod eget ac velit. Magna pharetra
-              eleifend urna quis laoreet. Nullam quis urna iaculis metus ornare
-              accumsan. Sed nunc lacus, lobortis nec ante sit amet.
-            </p>
-            <p>
-              Vitae quis magna. Sed condimentum dui sed nunc dapibus dignissim.
-              Sed at arcu gravida, vehicula massa ut, consectetur urna. Morbi eu
-              venenatis turpis. In tincidunt pharetra etiam veroeros.
-            </p>
-          </div>
-        </div>
-      </article>
-
       <!-- Influences -->
       <article id="influences" class="panel secondary">
         <div class="image">
@@ -278,9 +243,96 @@
         </div>
       </article>
 
+      <!-- Idiosyncracies -->
+      <article id="idiosyncracies" class="panel secondary">
+        <div class="image">
+          <img
+            src="images/water-drip.jpg"
+            alt=""
+            data-position="center center"
+          />
+        </div>
+        <div class="content">
+          <ul class="actions animated spinX">
+            <li><a href="#" class="button small back">Back</a></li>
+          </ul>
+          <div class="inner">
+            <header>
+              <h2>"Idiosyncracies"</h2>
+            </header>
+            <h4>Social media inactivity</h4>
+            <p>
+              As of April 12, 2019, I don't use social media (except for
+              texting) (enforced by a hard DNS redirect on my laptop and the
+              removal of all related apps and web browsers on mobile devices). I
+              have vowed never to work for any company that relies on a product
+              with an infinite-scrolling mechanic; I firmly believe that our
+              society's top talent should be focused on more important things
+              than getting billions of people hopelessly addicted to corporate
+              profit machines.
+            </p>
+            <h4>Rapid hydration</h4>
+            <p>
+              I can drink a full 1 liter water bottle (wide mouthed and either
+              glass, metal, or hard plastic) in 47 seconds. I cannot, however,
+              due this multiple times in a row, for painfully biological
+              reasons. I have no idea if this is actually that fast, but it
+              feels impressive and looks great on my résumé either way!
+            </p>
+            <h4>Rapid consumption</h4>
+            <p>
+              As with water, I can eat at an alarming speed (although I have no
+              specific metric). It's not uncommon for me to finish my meals
+              30-80% before any companions. This is most likely caused by the
+              existence of this same big mouth that inspires me to routinely
+              broadcast my myriad opinions into the beckoning void.
+            </p>
+            <h4>Constantly asking people about insects</h4>
+            <p>
+              When a conversation with a new acquaintence lulls, my go-to
+              response is to ask them what their favorite insect is. People's
+              reactions are legion, and never fail to amuse me! Most people
+              prefer either the
+              <a href="https://en.wikipedia.org/wiki/Butterfly" target="_blank"
+                >butterfly</a
+              >,
+              <a href="https://en.wikipedia.org/wiki/Dragonfly" target="_blank"
+                >dragonfly</a
+              >, or
+              <a href="https://en.wikipedia.org/wiki/Ladybug" target="_blank"
+                >ladybug</a
+              >, curiously.
+            </p>
+            <p>
+              What <em>is</em> your favorite insect, by the way? Do
+              <a href="mailto:brennan.colberg@gmail.com">email me</a> your
+              thoughts, please, along with an explanation of what you're
+              procrastinating on right now!
+            </p>
+            <h4>Chronic smartphone avoidance</h4>
+            <p>
+              When my phone isn't out of battery, it's probably in my backpack.
+              Why? I don't like being chained to anything when I can help it.
+              Not having to worry about notifications impeding on my
+              consciousness has taken a big weight off my shoulders; do try it
+              sometime!
+            </p>
+            <h4>Not knowing anything about current politics</h4>
+            <p>
+              Why spend my headspace and emotional energy being angry over
+              things that I cannot affect, and that do not affect me? This
+              mutual irrelevance between myself and our modern two-sided
+              propoganda game has inspired me to stop spending my time and
+              memory and emotions on it; I don't have enough time in this life
+              to impact many things, even <em>without</em> it!
+            </p>
+          </div>
+        </div>
+      </article>
+
       <!-- Footer -->
       <footer id="footer">
-        <p class="copyright">&copy; Brennan Colberg 2019</p>
+        <p class="copyright">&copy; Brennan D. Colberg 2019</p>
       </footer>
     </div>
 
