--- a/index.html
+++ b/index.html
@@ -28,18 +28,17 @@
               <p>
                 Autodidact. Avid reader &amp; Writer. Tall.<br />
                 Educational researcher. Programmer.<br />
-                Talker. Teetotaler. Prolific amateur.<br />
-                Intense? Not that old (around 20).
+                Talker. Teetotaler. Prolific amateur.
               </p>
             </header>
 
             <nav id="nav">
               <ul class="actions stacked special animated spinY">
-                <li><a href="#about" class="button">About</a></li>
-                <li><a href="#reading" class="button">Readings</a></li>
-                <li><a href="#writing" class="button">Writings</a></li>
-                <li><a href="#influences" class="button">Influences</a></li>
-                <li><a href="#projects" class="button">Projects</a></li>
+                <li><a href="#faq" class="button">FAQ</a></li>
+                <!-- <li><a href="#reading" class="button">Readings</a></li> -->
+                <!-- <li><a href="#writing" class="button">Writings</a></li> -->
+                <!-- <li><a href="#influences" class="button">Influences</a></li> -->
+                <!-- <li><a href="#projects" class="button">Projects</a></li> -->
                 <li>
                   <a href="#idiosyncracies" class="button">Idiosyncracies</a>
                 </li>
@@ -84,7 +83,7 @@
       </article>
 
       <!-- About -->
-      <article id="about" class="panel secondary">
+      <article id="faq" class="panel secondary">
         <div class="image">
           <img src="images/pic03.jpg" alt="" data-position="center center" />
         </div>
@@ -94,29 +93,64 @@
           </ul>
           <div class="inner">
             <header>
-              <h2>About</h2>
-              <p>
-                Magna feugiat lorem ipsum dolor<br />
-                veroeros sed adipiscing
-              </p>
+              <h2>FAQ</h2>
             </header>
+            <h4>What makes you interested in education?</h4>
             <p>
-              Lorem ipsum dolor sit amet, magna etiam adipiscing elit. Vivamus
-              in quam eu turpis venenatis euismod eget ac velit. Magna pharetra
-              eleifend urna quis laoreet. Nullam quis urna iaculis metus ornare
-              accumsan. Sed nunc lacus, lobortis nec ante sit amet.
+              When I was 15, I was incredibly frustrated with the high school
+              system. Being in a top school, moreover, I felt shocked that
+              <em>this</em> was all we humans had come up with so far. From
+              there, I started reading, writing, and thinking deeply about what
+              needs to be done.
+            </p>
+            <h4>What makes you interested in computer science?</h4>
+            <p>
+              I love systems, abstractions, and the way they interact.
+              Additionally, there's something enchanting about the ability to
+              individually make something that can impact the world with merely
+              your mind and fingers. Data visualization is an especially amazing
+              part of that, in my opinion!
             </p>
             <p>
-              Vitae quis magna. Sed condimentum dui sed nunc dapibus dignissim.
-              Sed at arcu gravida, vehicula massa ut, consectetur urna. Morbi eu
-              venenatis turpis. In tincidunt pharetra etiam veroeros.
+              In the coming years, much of the world's power will become
+              centralized around those who can weild technology effectively.
+              It's fun, albeit frightening, to be on top of this transformation
+              and watch it from within.
             </p>
+            <h4>How much <em>do</em> you read?</h4>
+            <p>
+              I read and manually copy ~5-8 pages worth of key excerpts from
+              each of approximately 10 books per month (120 per year).
+              <!-- A list of the books I've recently read and processed is <a href="#reading">here</a>. -->
+            </p>
+            <h4>What's your life plan?</h4>
+            <p>
+              I am figuring out how to create a centralized school system
+              separate from the public/governmental one, which can rapidly
+              iterate by scientifically testing theories and methods to optimize
+              for student satisfaction and growth
+              <em>(<strong>not</strong> standardized test scores)</em>.
+            </p>
+            <p>
+              Most educational innovation that I see from the tech world
+              consists in attempts to completetly replace physical schools with
+              online software; I do not believe this to be the correct course.
+              School redesigns, in my view, should revolve around first
+              redefining the roles of teachers and students in the classroom,
+              and then seeing how technology can aid that transformation (as
+              opposed to creating technology and shoehorning it in whether
+              helpful or not).
+            </p>
+            <h4>How old are you?</h4>
+            <p>Around 20.</p>
+            <h4>Where are you?</h4>
+            <p>I live in Seattle, WA, USA.</p>
           </div>
         </div>
       </article>
 
       <!-- Reading -->
-      <article id="reading" class="panel secondary">
+      <!-- <article id="reading" class="panel secondary">
         <div class="image">
           <img src="images/pic02.jpg" alt="" data-position="center center" />
         </div>
@@ -145,10 +179,10 @@
             </p>
           </div>
         </div>
-      </article>
+      </article> -->
 
       <!-- Writing -->
-      <article id="writing" class="panel secondary">
+      <!-- <article id="writing" class="panel secondary">
         <div class="image">
           <img src="images/pic02.jpg" alt="" data-position="center center" />
         </div>
@@ -177,10 +211,10 @@
             </p>
           </div>
         </div>
-      </article>
+      </article> -->
 
       <!-- Projects -->
-      <article id="projects" class="panel secondary">
+      <!-- <article id="projects" class="panel secondary">
         <div class="image">
           <img src="images/pic02.jpg" alt="" data-position="center center" />
         </div>
@@ -209,10 +243,10 @@
             </p>
           </div>
         </div>
-      </article>
+      </article> -->
 
       <!-- Influences -->
-      <article id="influences" class="panel secondary">
+      <!-- <article id="influences" class="panel secondary">
         <div class="image">
           <img src="images/pic02.jpg" alt="" data-position="center center" />
         </div>
@@ -241,7 +275,7 @@
             </p>
           </div>
         </div>
-      </article>
+      </article> -->
 
       <!-- Idiosyncracies -->
       <article id="idiosyncracies" class="panel secondary">
