--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<main>
 			<h1>Hi, I'm Brennan!</h1>
 
-			<section id="bio">
+			<section id="bio" class="hidden">
 				<h2>Biographical information</h2>
 				<ul></ul>
 			</section>
@@ -57,91 +57,127 @@
 						<h3>
 							Resume
 						</h3>
-						<a
-							class="external code"
-							href="https://github.com/brennancolberg/resume"
-						></a>
-						<a
-							class="external live"
-							href="https://resume.brennancolberg.com"
-						></a>
+						<p class="short">My current resume, built in HTML &amp; CSS.</p>
+						<div class="links">
+							<a
+								class="external code"
+								href="https://github.com/brennancolberg/resume"
+							></a>
+							<a
+								class="external live"
+								href="https://resume.brennancolberg.com"
+							></a>
+						</div>
 					</li>
 					<li id="periodic-table">
 						<h3>Periodic Table</h3>
-						<a
-							class="external code"
-							href="https://github.com/brennancolberg/periodic-table"
-						></a>
-						<a
-							class="external live"
-							href="https://periodic-table.brennancolberg.com"
-						></a>
+						<p class="short">
+							Online periodic table with varied display modes.
+						</p>
+						<div class="links">
+							<a
+								class="external code"
+								href="https://github.com/brennancolberg/periodic-table"
+							></a>
+							<a
+								class="external live"
+								href="https://periodic-table.brennancolberg.com"
+							></a>
+						</div>
 					</li>
 					<li id="typewriter">
 						<h3>Typewriter</h3>
-						<a
-							class="external code"
-							href="https://github.com/brennancolberg/typewriter"
-						></a>
-						<a
-							class="external live"
-							href="https://typewriter.brennancolberg.com"
-						></a>
+						<p class="short">
+							Text editor that only lets you modify the last 3 words you typed.
+						</p>
+						<div class="links">
+							<a
+								class="external code"
+								href="https://github.com/brennancolberg/typewriter"
+							></a>
+							<a
+								class="external live"
+								href="https://typewriter.brennancolberg.com"
+							></a>
+						</div>
 					</li>
 					<li id="axis-allies">
 						<h3>Axis &amp; Allies Dashboard</h3>
-						<a
-							class="external code"
-							href="https://github.com/brennancolberg/axis-allies"
-						></a>
-						<a
-							class="external live"
-							href="https://axis-allies.brennancolberg.com"
-						></a>
+						<p class="short">
+							Interface that automatically does all necessary calculations for
+							playing the board game "Axis &amp; Allies 1942 (Revised)".
+						</p>
+						<div class="links">
+							<a
+								class="external code"
+								href="https://github.com/brennancolberg/axis-allies"
+							></a>
+							<a
+								class="external live"
+								href="https://axis-allies.brennancolberg.com"
+							></a>
+						</div>
 					</li>
 					<li id="bframework">
 						<h3>BFramework</h3>
-						<a
-							class="external code"
-							href="https://github.com/brennancolberg/bframework"
-						></a>
+						<p class="short">
+							Java AWT/Swing game framework, with which I won second place in an
+							international video game programming competition in 2017.
+						</p>
+						<div class="links">
+							<a
+								class="external code"
+								href="https://github.com/brennancolberg/bframework"
+							></a>
+						</div>
 					</li>
 					<li id="fmbq">
 						<h3>FMBQ Jump Lights</h3>
-						<a
-							class="external code"
-							href="https://github.com/brennancolberg/fmbq"
-						></a>
-						<a class="external live" href="https://fmbq.brennancolberg.com"></a>
+						<p class="short">
+							Website that functionally replaces $150 of hardware for Free
+							Methodist Bible Quizzing teams.
+						</p>
+						<div class="links">
+							<a
+								class="external code"
+								href="https://github.com/brennancolberg/fmbq"
+							></a>
+							<a
+								class="external live"
+								href="https://fmbq.brennancolberg.com"
+							></a>
+						</div>
 					</li>
 					<li id="carbon">
 						<h3>Carbon Cycle Simulator</h3>
-						<a
-							class="external code"
-							href="https://github.com/brennancolberg/carbon"
-						></a>
-						<a
-							class="external live"
-							href="https://carbon.brennancolberg.com"
-						></a>
+						<div class="links">
+							<a
+								class="external code"
+								href="https://github.com/brennancolberg/carbon"
+							></a>
+							<a
+								class="external live"
+								href="https://carbon.brennancolberg.com"
+							></a>
+						</div>
 					</li>
 					<li id="grammar">
 						<h3>Backus-Naur Sentence Generator</h3>
-						<a
-							class="external code"
-							href="https://github.com/brennancolberg/carbon"
-						></a>
-						<a
-							class="external live hidden"
-							href="https://carbon.brennancolberg.com"
-						></a>
+						<div class="links">
+							<a
+								class="external code"
+								href="https://github.com/brennancolberg/carbon"
+							></a>
+						</div>
 					</li>
 					<li id="binary-quiz">
 						<h3>Binary Quiz</h3>
-						<a
-							class="external live"
-							href="https://binary-quiz.brennancolberg.com/"
-						></a>
+						<div class="links">
+							<a
+								class="external live"
+								href="https://binary-quiz.brennancolberg.com/"
+							></a>
+						</div>
 					</li>
 				</ul>
 			</section>
